@@ -12,6 +12,10 @@ What's New in Python 3.2 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #8610: Load file system codec at startup, and display a fatal error on
+  failure. Set the file system encoding to utf-8 (instead of None) if getting
+  the locale encoding failed, or if nl_langinfo(CODESET) function is missing.
+
 - PyFile_FromFd() uses PyUnicode_DecodeFSDefault() instead of
   PyUnicode_FromString() to support surrogates in the filename and use the
   right encoding
